syntax = "proto3";

// Package arrebato.consumer.command.v1 provides commands written to the raft log regarding consumer states.
// These messages are used internally by nodes in the cluster to portray changes from the leader node to all followers.
package arrebato.consumer.command.v1;

import "arrebato/consumer/v1/consumer.proto";

option go_package = "github.com/davidsbond/arrebato/internal/proto/arrebato/consumer/command/v1;consumercmd";

// The SetTopicIndex message is a command indicating that a consumer's index within a topic has changed.
message SetTopicIndex {
  // The index of the customer within a topic.
  arrebato.consumer.v1.TopicIndex topic_index = 1;
}
