syntax = "proto3";

// Package arrebato.node.command.v1 provides commands written to the raft log regarding node state.
// These messages are used internally by nodes in the cluster to portray changes from the leader node to all followers.
package arrebato.node.command.v1;

import "arrebato/node/v1/node.proto";

option go_package = "github.com/davidsbond/arrebato/internal/proto/arrebato/node/command/v1;nodecmd";

// The AddNode message is a command indicating that a node has been added to the cluster.
message AddNode {
  arrebato.node.v1.Node node = 1;
}

// The RemoveNode message is a command indicating that a node has been removed from the cluster.
message RemoveNode {
  string name = 1;
}

// The AssignTopic message is a command indicating that a topic has been assigned to a given node.
message AssignTopic {
  string node_name = 1;
  string topic_name = 2;
}

// The UnassignTopic message is a command indicating that a topic should be unassigned from all nodes. For example,
// if it is deleted.
message UnassignTopic {
  string name = 1;
}
