syntax = "proto3";

option go_package = "github.com/davidsbond/arrebato/internal/proto/arrebato/topic/command/v1;topiccmd";

import "arrebato/topic/v1/topic.proto";

// Package arrebato.topic.command.v1 provides commands written to the raft log regarding topic management. These messages
// are used internally by nodes in the cluster to portray changes from the leader node to all followers.
package arrebato.topic.command.v1;

// The CreateTopic message is a command indicating that a new topic has been created.
message CreateTopic {
  // The new topic.
  arrebato.topic.v1.Topic topic = 1;
}

// The DeleteTopic message is a command indicating that a topic should be deleted.
message DeleteTopic {
  // The name of the topic to delete.
  string name = 1;
}
